Optimize database query performance, logging, and health check handling
- Added new GIN trigram index and composite indexes for log search, analytics, and status checks.
- Refactored repositories to reduce full table scans and leverage targeted SQL queries.
- Streamlined health check services to use preloaded data, pooled resources, and bulk operations.
- Replaced sequential requests in public status UI with batched API calls.
- Cleaned up and simplified JvmService by removing unused scheduled GC logic.
- Updated version to 0.0.83-SNAPSHOT.